Skiil some final fields direct access